apps/ray/rayservice.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ray
